<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="420dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_back_flat_1_20">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:textColorHint="@color/accent_light"
            android:background="@drawable/rounded_corner_light_20"
            android:paddingLeft="20dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:hint="@string/email_hint" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:textColorHint="@color/accent_light"
            android:background="@drawable/rounded_corner_light_20"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:hint="@string/pass_hint" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/accent_dark"
            android:gravity="center"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/accent_dark"
        android:background="@drawable/rounded_back_20"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_bold"
        android:letterSpacing="0"
        android:text="@string/log_in_btn" />
</LinearLayout>