<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="19dp"
    android:background="@color/accent_light"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:text="@string/app_name_logo"
        android:textStyle="bold"
        android:textColor="@color/flat1"
        android:background="@drawable/rounded_back_60"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:textSize="40sp"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textColor="@color/flat1"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/log_in_section"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textColor="@color/flat1"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/create_acc_section"/>
    </LinearLayout>
    <include
        layout="@layout/login_create"/>
    <!--
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        -->



</LinearLayout>

