<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/create_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_left"
            app:tint="@color/accent_light" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/create_done_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/add"
            app:tint="@color/accent_dark" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="Введите название"
                android:id="@+id/create_title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="30sp"
                android:textColor="@color/flat4"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:layout_marginBottom="20dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_img_container"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="20dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/accent_dark"
                        android:minHeight="200dp">
                        <ImageView
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:id="@+id/create_img"
                            android:background="@color/flat2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/sample_food_1"/>
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="20dp"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:src="@drawable/edit"
                            app:tint="@color/accent_light" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:id="@+id/create_description_container"
                    app:cardBackgroundColor="@color/background"
                    app:cardElevation="5dp"
                    android:layout_marginHorizontal="20dp"
                    app:contentPadding="20dp"
                    app:contentPaddingTop="50dp"
                    android:layout_marginTop="-40dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/create_img_container">
                    <EditText
                        android:id="@+id/create_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/flat3"
                        android:hint="Добавьте описание"/>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:contentPaddingTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/create_description_container">

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/background"
                app:cardElevation="5dp"
                app:contentPadding="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/flat4"
                        android:text="@string/recipe_complexity"/>
                    <LinearLayout
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:id="@+id/create_hat1"
                            android:layout_width="19dp"
                            android:layout_height="19dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/hat_empty"
                            app:tint="@color/flat3" />
                        <ImageView
                            android:id="@+id/create_hat2"
                            android:layout_width="19dp"
                            android:layout_height="19dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/hat_empty"
                            app:tint="@color/flat3"/>
                        <ImageView
                            android:id="@+id/create_hat3"
                            android:layout_width="19dp"
                            android:layout_height="19dp"
                            android:src="@drawable/hat_empty"
                            app:tint="@color/flat3"/>
                    </LinearLayout>
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/flat4"
                        android:text="@string/recipe_cook_time"/>
                    <LinearLayout
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_width="18dp"
                            android:layout_gravity="center"
                            android:layout_height="18dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/clock"
                            app:tint="@color/accent_light" />
                        <EditText
                            android:textAlignment="center"
                            android:inputType="number"
                            android:id="@+id/create_cook_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="50"
                            android:textColor="@color/flat3"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="14sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" минут"
                            android:textColor="@color/flat3"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="14sp"/>
                    </LinearLayout>
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/flat4"
                        android:text="@string/recipe_portions_num"/>
                    <LinearLayout
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_width="18dp"
                            android:layout_gravity="center"
                            android:layout_height="18dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/portion"
                            app:tint="@color/accent_light" />
                        <EditText
                            android:textAlignment="center"
                            android:inputType="number"
                            android:id="@+id/create_portions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4"
                            android:textColor="@color/flat3"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="14sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" порции"
                            android:textColor="@color/flat3"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="14sp"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/background"
                app:cardElevation="5dp"
                app:contentPadding="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="16sp"
                        android:textColor="@color/flat4"
                        android:text="@string/ingredients"
                        android:layout_marginBottom="10dp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_gravity="center"
                        android:id="@+id/create_ingredient_recycler_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="3dp"
                        android:textColor="@color/accent_light"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="16sp"
                        android:id="@+id/create_add_ingredient"
                        android:background="@drawable/rounded_corner_flat2_10"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Добавить ингридиент"
                        android:layout_marginBottom="20dp"/>
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="16sp"
                        android:textColor="@color/flat4"
                        android:layout_marginBottom="5dp"
                        android:text="@string/additionally"/>

                    <EditText
                        android:id="@+id/create_ingredient_description"
                        android:hint="Дополнительно о ингридиентах"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/flat3"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Добавте шаги приготовления"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/accent_light"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginBottom="20dp"/>
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/create_viewpager"
                android:layout_width="match_parent"
                android:layout_marginBottom="60dp"
                android:layout_height="wrap_content">

            </androidx.viewpager2.widget.ViewPager2>

        </LinearLayout>
    </ScrollView>
    <!-- <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.viewpager2.widget.ViewPager2> -->




</LinearLayout>